<!--
  ~ Copyright 2017 Chaos Leong
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">FxcnBeta</string>

    <string name="card_image_content_description">Thumb image of the article.</string>
    <string name="content_image_description">Image associated with the article.</string>
    <string name="author_image_description">Thumb image of the author.</string>
    <string name="captcha_image_description">The verification code required to add a comment.</string>
    <string name="reply_image_description">Button for reply comment.</string>

    <string name="time_unknown">未知</string>
    <string name="time_second">刚刚</string>
    <plurals name="time_minute">
        <item quantity="one">1 分钟前</item>
        <item quantity="other">%d 分钟前</item>
    </plurals>
    <plurals name="time_hour">
        <item quantity="one">1 小时前</item>
        <item quantity="other">%d 小时前</item>
    </plurals>
    <plurals name="time_day">
        <item quantity="one">昨天</item>
        <item quantity="other">%d 天前</item>
    </plurals>
    <plurals name="time_week">
        <item quantity="one">1 周前</item>
        <item quantity="other">%d 周前</item>
    </plurals>
    <plurals name="time_month">
        <item quantity="one">1 个月前</item>
        <item quantity="other">%d 个月前</item>
    </plurals>
    <plurals name="time_year">
        <item quantity="one">1 年前</item>
        <item quantity="other">%d 年前</item>
    </plurals>

    <string name="home_summary_format">%1$s · %2$d 评论</string>

    <string name="read_count">阅读 %d</string>
    <string name="comment_count">评论 %d</string>

    <string name="read_1_decimal_comment_format">%1$.1fk 阅读 · %2$d 评论</string>
    <string name="read_kilo_comment_format">%1$.0fk 阅读 · %2$d 评论</string>
    <string name="read_comment_format">%1$dk 阅读 · %2$d 评论</string>

    <string name="no_more_articles">没有更多内容</string>
    <string name="load_articles_failed">加载失败</string>
    <string name="no_more_comments">没有更多评论</string>

    <string name="no_content">暂无内容</string>

    <string name="nav_home">最新资讯</string>
    <string name="nav_rank">今日排行</string>
    <string name="nav_hot_articles">本月热门</string>
    <string name="nav_hot_comments">精彩评论</string>
    <string name="nav_help">帮助 &amp; 反馈</string>
    <string name="nav_settings">设置</string>
    <string name="nav_auto_switch_theme">自动切换主题</string>

    <string name="details">文章正文</string>
    <string name="comment">评论</string>

    <string name="content_comment_count">%d 条评论</string>

    <string-array name="rank_types">
        <item>最高推荐</item>
        <item>阅读最多</item>
        <item>评论最热</item>
    </string-array>

    <string name="failed_to_load">加载失败，点击按钮重试</string>
    <string name="retry">重试</string>

    <!-- Preferences -->
    <string name="display_settings">显示</string>
    <string name="night_mode">夜间模式</string>
    <string name="auto_switch_theme">自动切换主题</string>
    <string name="basic_settings">常规</string>
    <string name="content_text_level">文章字体大小</string>
    <string name="default_content_text_level">中</string>
    <string-array name="content_text_levels">
        <item>小</item>
        <item>中</item>
        <item>大</item>
    </string-array>
    <string name="load_image">图片加载</string>
    <string name="auto_load_image_in_wifi_mode">仅在 Wi-Fi 环境下自动加载图片</string>
    <string name="mobile_api_mode">官方模式</string>
    <string name="use_mobile_api">与官方客户端数据保持一致</string>
    <string name="list_item_style">列表样式</string>
    <string name="list_item_image_align_start">列表图片居左显示</string>
    <string name="animation_mode">列表动画</string>
    <string name="animation_mode_summary">加载列表时显示动画</string>
    <string name="hide_bars_automatically_mode">隐藏边栏</string>
    <string name="hide_bars_automatically_mode_summary">首页自动隐藏标题栏及底部栏</string>
    <string name="clear_cache">清理缓存</string>
    <string name="clear_cache_summary">清理图片缓存</string>
    <string name="about">关于</string>
    <string name="version_name">版本号</string>
    <string name="update_log">更新日志</string>
    <string name="license">开源许可</string>
    <string name="info_default">Unknown</string>

    <!-- Preferences for theme -->
    <string name="enable">开启</string>
    <string name="time_of_night">夜间主题</string>
    <string name="start_time_of_night">开始时间</string>
    <string name="end_time_of_night">结束时间</string>

    <string name="hot_comment_content">%1$s：%2$s</string>
    <string name="anonymous">匿名网友</string>
    <string name="anonymous_web">匿名人士</string>
    <string name="anonymous_format">%s网友</string>
    <string name="int_format">%d</string>
    <string name="author_format">By %s</string>

    <string name="hint_captcha">输入验证码</string>
    <string name="hint_comment">评论正文</string>
    <string name="error_captcha_should_not_empty">验证码不能为空</string>
    <string name="error_comment_should_not_empty">评论不能为空</string>
    <string name="add_comment_succeed">评论成功，请稍候刷新查看</string>
    <string name="add_comment_failed_format">评论失败，%s</string>
    <string name="failed_to_get_captcha">获取验证码失败</string>
    <string name="operation_failed">操作失败</string>

    <string name="fb_name_hint">姓名 (可选)</string>
    <string name="fb_contact_hint">QQ 或 Email (可选)</string>
    <string name="fb_feedback_hint">请填写您的问题或建议</string>
    <string name="send">发送</string>

    <string name="feedback_subject">[Feedback] 关于 FxcnBeta 的一些问题</string>

    <string name="feedback_content_should_not_empty">反馈内容不能为空</string>
    <string name="sent">已发送，感谢您的反馈</string>
    <string name="fb_feedback_max_length">200</string>
    <string name="open_in_browser">用浏览器打开</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="add_comment">添加评论</string>
    <string name="comment_closed">评论已关闭</string>
    <string name="share">分享</string>
    <string name="wechat_friends">微信好友</string>
    <string name="wechat_timeline">朋友圈</string>
    <string name="share_more">更多</string>
    <string name="share_to">分享到…</string>
    <string name="share_link_format">"【%s】    详细信息：%s"</string>

    <string name="transition_details_background" translatable="false">transition_details_background</string>
    <string name="transition_details_title" translatable="false">transition_details_title</string>
    <string name="default_captcha_for_mobile_api" translatable="false">0000</string>

    <string name="error_invalid_sid">无效数据，不能查看详细内容</string>

    <string name="email">lgf42031@gmail.com</string>

    <string name="notices_title">开源许可</string>
    <string name="notices_close">关闭</string>
    <string name="rgba_format" translatable="false">rgba(%1$d,%2$d,%3$d,%4$1f)</string>
    <string name="custom_notices_format_style" translatable="false">
        body {
            font-family: sans-serif;
            overflow-wrap: break-word;
            background-color: %1$s;
        }
        pre {
            background-color: %2$s;
            color: %3$s;
            padding: 1em;
            white-space: pre-wrap;
        }
        ul {
            padding-left: 1em;
            padding-right: 1em;
            margin: 0px;
        }
        li {
            color: %4$s;
            list-style: none;
        }
        li a {
            color: %5$s;
        }
    </string>

    <string name="bottom_bar_scrolling_behavior">org.chaos.fx.cnbeta.widget.BottomBarSnapBehavior</string>

    <string name="share_error_success">分享成功</string>
    <string name="share_error_failed">分享失败</string>

    <string name="clear_cache_success">清理成功</string>
    <string name="clear_cache_failed">清理失败</string>
    <string name="qq">QQ</string>

    <string name="close">关闭</string>

    <string name="save_image">保存图片</string>
    <string name="no_space_left">sdcard 空间不足</string>
    <string name="format_saved_to_path">已保存至：%s</string>
</resources>
