<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_36dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_rank"
            android:icon="@drawable/ic_sort_black_36dp"
            android:title="@string/nav_rank" />
        <item
            android:id="@+id/nav_hot_articles"
            android:icon="@drawable/ic_whatshot_black_36dp"
            android:title="@string/nav_hot_articles" />
        <item
            android:id="@+id/nav_hot_comments"
            android:icon="@drawable/ic_forum_black_36dp"
            android:title="@string/nav_hot_comments" />
    </group>

    <group android:id="@+id/group_config">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_36dp"
            android:title="@string/nav_help"
            android:visible="false" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_36dp"
            android:title="@string/nav_settings" />
    </group>

</menu>
