<!--
  ~ Copyright 2015 Chaos
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:key="basic"
        android:title="@string/basic_setting">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="safe_data_mode"
            android:summary="@string/auto_load_image_in_wifi_mode"
            android:title="@string/load_image" />
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:key="about"
        android:title="@string/about">

        <android.support.v7.preference.Preference
            android:key="help_and_feedback"
            android:title="@string/nav_help" />

        <android.support.v7.preference.Preference
            android:key="author_email"
            android:summary="@string/info_default"
            android:title="@string/author_email" />

        <android.support.v7.preference.Preference
            android:key="version_name"
            android:summary="@string/info_default"
            android:title="@string/version_name" />

        <org.chaos.fx.cnbeta.preferences.DialogPreference
            android:dialogIcon="@null"
            android:dialogLayout="@layout/layout_release_note"
            android:dialogMessage="@null"
            android:dialogTitle="@null"
            android:key="release_note"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/update_log" />
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>
