<!--
  ~ Copyright 2019 Chaos
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="auto_switch_theme"
        android:title="@string/enable" />

    <android.support.v7.preference.PreferenceCategory
        android:key="night_theme_time_label"
        android:title="@string/time_of_night">

        <android.support.v7.preference.Preference
            android:defaultValue="false"
            android:key="night_mode_start_time"
            android:title="@string/start_time_of_night" />

        <android.support.v7.preference.Preference
            android:defaultValue="false"
            android:key="night_mode_end_time"
            android:title="@string/end_time_of_night" />

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
