<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Chaos
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="insideOverlay"
    android:scrollbarThumbVertical="@drawable/scrollbar_handle_material"
    android:transitionName="@string/transition_details_background"
    tools:targetApi="lollipop">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/article_padding">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/content_title"
            android:textIsSelectable="true"
            android:textSize="@dimen/article_text_title"
            android:transitionName="@string/transition_details_title"
            tools:targetApi="lollipop"
            tools:text="It's on: Rubio and Cruz elash over immigration and the GOP's future" />

        <ImageView
            android:id="@+id/author_image"
            android:layout_width="@dimen/author_img_size"
            android:layout_height="@dimen/author_img_size"
            android:layout_below="@+id/title"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/author_image_description"
            android:src="@color/holder_color"
            tools:background="#000" />

        <TextView
            android:id="@+id/source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/author_image"
            android:layout_toEndOf="@+id/author_image"
            android:textColor="@color/content_source"
            android:textSize="@dimen/article_text_secondary"
            tools:text="The Washington Post" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/author_image"
            android:maxLines="1"
            android:textColor="@color/content_time"
            android:textSize="@dimen/article_text_secondary"
            tools:text="3 hours ago" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/source"
            android:layout_toEndOf="@+id/author_image"
            android:maxLines="1"
            android:textColor="@color/content_author"
            android:textSize="@dimen/article_text_secondary"
            tools:text="Sean Sullivan and Katie Zezima" />

        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/author"
            android:layout_marginTop="@dimen/article_padding"
            android:gravity="center_horizontal"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/comment_count"
            style="@style/ArticleContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/content_layout"
            android:layout_marginTop="@dimen/article_padding"
            android:textColor="@color/content_comment_count"
            tools:text="12 条评论" />
    </RelativeLayout>
</ScrollView>